versioned_docs/version-22.3/reference/node-properties.mdx
---
title: Node Configuration Properties
toc_min_heading_level: 2
toc_max_heading_level: 2
---

<head>
    <meta name="title" content="Node configuration properties | Redpanda Docs"/>
    <meta name="description" content="Node configuration properties list."/>
    <link rel="canonical" href="https://docs.redpanda.com/docs/reference/node-properties/" />
</head>

Node configuration properties are applied individually to each node in a cluster. The following describes each node configuration property, with its default setting if applicable.

:::important
After you change a node-level property setting, you must restart the node for the change to take effect.
:::

To learn how to set these properties from studying a sample configuration file, see the [node configuration sample](node-configuration-sample.mdx).

## Required properties 

:::caution
You must include the following required properties in your configuration. If you omit them, Redpanda will not start.
:::

### data_directory

Path to the directory for storing Redpanda's streaming data files.

---

## Optional properties 

### admin

IP address and port of the admin server.

**Default**: 127.0.0.1:9644

---

### admin_api_doc_dir

Path to the admin API documentation directory.

**Default**: /usr/share/redpanda/admin-api-doc 

---

### admin_api_tls

TLS configuration for the Admin API.

**Default**: null

---

### advertised_kafka_api

Addresses of Kafka API published to clients.

**Default**: empty array

---

### advertised_rpc_api

Address of the RPC endpoint published to other cluster members.

**Default**: null

---

### cloud_storage_cache_directory

The directory where the cache archive is stored. This property is mandatory when [cloud_storage_enabled](../cluster-properties#cloud_storage_enabled) is set to `true`.

**Default**: null

---

### coproc_supervisor_server

IP address and port for supervisor service.

**Default**: 127.0.0.1:43189

---

### dashboard_dir

Path to the directory where the HTTP dashboard is located. 

**Default**: null

---

### developer_mode

:::caution
Enabling `developer_mode` isn't recommended for production use.
:::

Flag to enable developer mode, which skips most of the checks performed at startup. 

**Default**: false

---

### empty_seed_starts_cluster

Controls how a new cluster is formed. This property must have the same value in all nodes in a cluster.

If `true`, an empty [seed_servers](#seed_servers) list will denote that this node should form a cluster. At most, one node in the cluster should be configured with an empty seed_servers list. If no such configured node exists, or if configured to be `false`, all nodes denoted by the seed_servers list must be identical among those nodes' configurations, and those nodes will form the initial cluster.

:::tip
While it's set `true` by default for backward compatibility, Redpanda recommends that you set `empty_seed_starts_cluster` to `false`.
:::

**Default**: true

---

### kafka_api

IP address and port of the Kafka API endpoint that handles requests.

**Default**: 127.0.0.1:9092

---

### kafka_api_tls

Transport Layer Security (TLS) configuration for the Kafka API endpoint.

**Default**: null

---

### node_id

A number that uniquely identifies the node within the cluster. If `null` (the default value), Redpanda automatically assigns an ID. If set, it must be non-negative value.

:::caution
The `node_id` property mustn't be changed after a node joins the cluster. 
:::

**Default**: null

**Range**: [0, ...]

---

### rack

A label that identifies a failure zone. Apply the same label to all nodes in the same failure zone. When [enable_rack_awareness](../cluster-properties#enable_rack_awareness) is set to `true` at the cluster level, the system uses the rack labels to spread partition replicas across different failure zones.

**Default**: null

---

### rpc_server

IP address and port for the Remote Procedure Call (RPC) server.

**Default**: 127.0.0.1:33145

---

### rpc_server_tls

TLS configuration for the RPC server.

**Default**: null

---

### seed_servers

List of seed servers used to join an existing cluster. 

If a cluster does not already exist:

- When [empty_seed_starts_cluster](#empty_seed_starts_cluster) is `true`, if the seed_servers list is empty, this node will be the cluster root to form a new cluster that other nodes subsequently join. Exactly one node in the cluster should set seed_servers to be empty when first bootstrapping a cluster. For nodes that are not the root node, this is the list of nodes used to join the cluster.

- Otherwise, when [empty_seed_starts_cluster](#empty_seed_starts_cluster) is `false`, this refers to the list of nodes that initially bootstrap the cluster. In this case, seed_servers cannot be empty, and seed_servers must be identical for all nodes in that list. For nodes not in the seed_servers list, this is the list of nodes used to join the cluster.

**Default**: null
